--- a/charts.html
+++ b/charts.html
@@ -1,74 +1,48 @@
 <!DOCTYPE html>
 <html lang="en" id="top">
-  <head>
+<head>
     <meta charset="utf-8">
-    <title>npm-stat | vorb.de</title>
-    <link rel="stylesheet" href="https://vorb.de/res/milten.css">
-    <link rel="icon" href="/favicon.ico">
-    <link rel="alternate" type="application/atom+xml"
-      href="https://vorb.de/log/feed.xml" title="Article feed">
-    <link rel="alternate" type="application/atom+xml"
-      href="https://vorb.de/log/comment-feed.xml" title="Comment feed">
-    <meta name="author" content="Paul Vorbach">
-    <meta name="keywords"
-      content="npm, node.js, statistics, chart, downloads">
+    <title>npm-stat</title>
+    <link rel="stylesheet" href="milten.css">
+    <link rel="icon" href="favicon.ico">
+    <meta name="author" content="Paul Vorbach and Kevin Whinnery">
+    <meta name="keywords" content="npm, node.js, statistics, chart, downloads">
     <meta name="description" content="download statistics for npm packages">
-  </head>
-  <body>
-    <header id="site">vorb.de</header>
-    <nav id="nav">
-      <ul id="branches">
-        <li><a href="https://vorb.de/log/" accesskey="l">Blog</a>
-        <li class="active"><a href="https://vorb.de/dev/" accesskey="d">Dev</a>
-        <li><a href="https://vorb.de/info/" accesskey="i">Info</a>
-      </ul>
-      <ol id="path">
-        <li><a href="https://vorb.de/">vorb.de</a>
-        <li><a href="https://vorb.de/dev/">dev</a>
-        <li><a href="/">npm-stat</a>
-      </ol>
-      <ol id="access">
-        <li><a href="#top" title="To the top" id="back" accesskey="t">↑</a>
-        <li><a href="#nav">Navigation</a>
-        <li><a href="#content">Content</a>
-      </ol>
-    </nav>
+</head>
+<body>
     <section id="content">
-      <header>
-        <h1>npm-stat</h1>
-      </header>
-      <section>
-        <form action="charts.html" method="GET">
-          <h2>Download statistics</h2>
-        </form>
+        <header>
+            <h1>npm-stat</h1>
+        </header>
+        <section>
+            <form action="charts.html" method="GET">
+                <h2>Download statistics</h2>
+            </form>
 
-        <figure id="days" class="full"></figure>
-        <figure id="weeks" class="full"></figure>
-        <figure id="months" class="full"></figure>
-      </section>
-      <footer class="meta">
-        <p>The charts of this service are powered by
-          <a href="http://www.highcharts.com/">Highcharts JS</a> and <em>of
-            course</em> <a href="https://npmjs.org/">npm</a>.</p>
-          <a class="forkme" href="https://github.com/pvorb/npm-stat"><img
-            style="position: absolute; top: 0; right: 0; border: 0;"
-            src="https://vorb.de/res/forkme.png" alt="Fork me on GitHub"></a>
-      </footer>
+            <figure id="days" class="full"></figure>
+            <figure id="weeks" class="full"></figure>
+            <figure id="months" class="full"></figure>
+        </section>
+        <footer class="meta">
+            <p>The charts of this service are powered by
+              <a href="http://www.highcharts.com/">Highcharts JS</a> and <em>of
+                course</em> <a href="https://npmjs.org/">npm</a>.</p>
+              <a class="forkme" href="https://github.com/kwhinnery/npm-stat">
+                <img style="position: absolute; top: 0; right: 0; border: 0;"
+                    src="forkme.png" alt="Fork me on GitHub">
+            </a>
+        </footer>
     </section>
-    <aside id="extra">
-      <form id="sf" action="https://vorb.de/search.html" method="GET">
-        <input type="search" name="s" accesskey="s" placeholder="Search">
-      </form>
-    </aside>
     <footer id="about">
-      <p>© 2012 – Paul Vorbach. <a
-        href="https://vorb.de/info/contact.html">Contact</a>.</p>
-      <p><a href="https://flattr.com/thing/903633/npm-stat" target="_blank">
-        <img src="http://api.flattr.com/button/flattr-badge-large.png"
-          alt="Flattr this" title="Flattr this" border="0" /></a></p>
+        <p>
+            Original © 2012 – 
+            <a href="https://vorb.de/info/contact.html">Paul Vorbach</a>. 
+            Modified and hosted on GitHub Pages by
+            <a href="http://github.com/kwhinnery">Kevin Whinnery</a>.
+        </p>
     </footer>
-    <script type="text/javascript" src="https://vorb.de/res/jquery-1.8.1.min.js"></script>
-    <script type="text/javascript" src="https://vorb.de/res/highcharts-2.3.2.min.js"></script>
-    <script type="text/javascript" src="charts.min.js"></script>
-  </body>
+    <script src="jquery.js"></script>
+    <script src="highcharts.js"></script>
+    <script src="charts.min.js"></script>
+</body>
 </html>
